Bug 327538 - determine artefact identity from an artefact passed in by URI