@@ -14,13 +14,12 @@ package org.eclipse.virgo.kernel.artifact;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 import java.util.Map;
 
 import org.eclipse.virgo.util.osgi.manifest.VersionRange;
 import org.junit.Test;
-
 
 public class ArtifactSpecificationTests {
 
@@ -31,44 +30,41 @@ public class ArtifactSpecificationTests {
         ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), props);
         assertEquals("bar", spec.getProperties().get("foo"));
     }
-    
+
     @Test
     public void testCreateWithoutProperties() {
         ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"));
         assertNotNull(spec.getProperties());
     }
 
-    @Test(expected=UnsupportedOperationException.class)
+    @Test(expected = UnsupportedOperationException.class)
     public void testPropertiesImmutable() {
         Map<String, String> props = new HashMap<String, String>();
         props.put("foo", "bar");
         ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), props);
         spec.getProperties().put("a", "b");
     }
-    
-    
-    @Test(expected=UnsupportedOperationException.class)
+
+    @Test(expected = UnsupportedOperationException.class)
     public void testEmptyPropertiesImmutable() {
         ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"));
         spec.getProperties().put("foo", "bar");
     }
-    
+
     @Test
     public void testCreateWithUrlAndProperties() throws Exception {
         Map<String, String> props = new HashMap<String, String>();
         props.put("foo", "bar");
-        URL url = new URL("file:x.y");
-        ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), url, props);
-        assertEquals(url, spec.getUrl());
+        URI uri = new URI("file:x.y");
+        ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), uri, props);
+        assertEquals(uri, spec.getUri());
     }
-    
+
     @Test
     public void testCreateWithUrlWithoutProperties() throws Exception {
-        URL url = new URL("file:x.y");
-        ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), url);
-        assertEquals(url, spec.getUrl());
+        URI uri = new URI("file:x.y");
+        ArtifactSpecification spec = new ArtifactSpecification("t", "n", new VersionRange("1.2.3"), uri);
+        assertEquals(uri, spec.getUri());
     }
-    
-    
 
 }
